--- a/hugo.toml
+++ b/hugo.toml
@@ -9,11 +9,11 @@ disqusShortname = ""
 googleAnalytics = ""
 
 [author]
-name = "Dmitry Kolosov"
+name = "Christos"
 
 [params]
-author = "Dmitry Kolosov"
-description = "Anubis is a simple minimalist theme for Hugo blog engine."
+author = "Christos"
+description = "Siege"
 dateFormat = "2006-01-02"
 paginationSinglePost = true
 style = "auto"
